--- a/themes/austrofeedr_water/css/global.css
+++ b/themes/austrofeedr_water/css/global.css
@@ -209,3 +209,11 @@ li a:link {
 
 body.toolbar-drawer {padding-top: 0em !important;}
 
+.region-preface-first-inner {
+  position: absolute; 
+  left: 970px; 
+  top: 10px;
+  background-color:#ffffff;
+  width: 160px;
+  padding:5px;
+}
